additional ways to denote a string

--- a/highlighter-test.html
+++ b/highlighter-test.html
@@ -39,6 +39,8 @@ module Foo
       %q(no interpolation)
       %Q(interpolation and backslashes)
       %(interpolation and backslashes)
+      %!interpolation and backslashes!
+      %{interpolation and backslashes}
       `echo command interpretation with interpolation and backslashes`
       %x(echo command interpretation with interpolation and backslashes)
     end
